--- a/app/views/nyu/_tip1.html.erb
+++ b/app/views/nyu/_tip1.html.erb
@@ -1,4 +1,4 @@
 <div class="nyu-tip">
   To search for articles on a topic, use the
-  <a href="http://arch.library.nyu.edu">Articles &amp; Databases</a> tab.
+  <a href="http://guides.nyu.edu/newarch">Articles &amp; Databases</a> tab.
 </div>
