--- a/app/views/nyu/_sidebar.html.erb
+++ b/app/views/nyu/_sidebar.html.erb
@@ -7,6 +7,6 @@
 <% end %>
 <%= sidebar_section("additional_options", content_tag(:h2, "Additional Options")) do %>
   <ul class="nav-list">
-    <li><a href="http://guides.nyu.edu/newarch">Find articles on your topic</a></li>
+    <li><a href="http://guides.nyu.edu/arch">Find articles on your topic</a></li>
   </ul>
 <% end %>
