--- a/app/views/resolve/_request_link.html.erb
+++ b/app/views/resolve/_request_link.html.erb
@@ -2,7 +2,7 @@
 <% if current_user %>
   <%- # Link for "Request" action with class "ajax_window" for unobtrusive JS. -%>
   <%= link_to(t('resolve.holdings.request_text'), new_holding_request_url(service_response),
-    target: "_blank", class: "btn btn-primary request-link ajax_window") %>
+    class: "btn btn-primary request-link ajax_window", remote: true) %>
 <% else %>
   <%- # Link to login screen -%>
   <strong>
