Submit button for holding requests somehow lost their bootstrap styling so adding ti back here

--- a/app/views/holding_requests/_new_available.html.erb
+++ b/app/views/holding_requests/_new_available.html.erb
@@ -22,5 +22,5 @@
       <%= delivery_times %>
     <% end %>
   <% end %>
-  <%= submit_tag 'Submit' %>
+  <%= submit_tag 'Submit', { class: 'btn btn-primary' } %>
 <% end %>
