--- a/app/views/holding_requests/_new_offsite.html.erb
+++ b/app/views/holding_requests/_new_offsite.html.erb
@@ -7,5 +7,5 @@
 <%= request_form(:offsite) do %>
   <%= entire_request_option(:offsite) %><br />
   <%= scan_request_option(:offsite) %>
-  <%= submit_tag 'Submit' %>
+  <%= submit_tag 'Submit', { class: 'btn btn-primary' } %>
 <% end %>
