--- a/app/views/holding_requests/_new_recall.html.erb
+++ b/app/views/holding_requests/_new_recall.html.erb
@@ -11,5 +11,5 @@
     <%= pickup_locations_field_set %>
     <%= delivery_times %>
   <% end %>
-  <%= submit_tag 'Submit' if pickup_locations.size > 1 %>
+  <%= submit_tag 'Submit', { class: 'btn btn-primary' } if pickup_locations.size > 1 %>
 <% end %>
