--- a/app/views/layouts/resolve.html.erb
+++ b/app/views/layouts/resolve.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title><%= @page_title %> | GetIt</title>
+    <title>GetIt | <%= @page_title %></title>
     <%= render 'common/google_tag_manager_script' %>
     <%= meta %>
     <%= resolve_stylesheets %>
