--- a/app/views/layouts/resolve.html.erb
+++ b/app/views/layouts/resolve.html.erb
@@ -40,7 +40,7 @@
     </script>
     <% end %>
     <script type="text/javascript">
-      rg4js('apiKey', <%= ENV['RAYGUN_API_KEY'] %>);
+      rg4js('apiKey', "<%= ENV['RAYGUN_API_KEY'] %>");
       rg4js('enableCrashReporting', true);
       rg4js('enablePulse', true);
     </script>
