--- a/app/assets/stylesheets/resolve/_common.scss
+++ b/app/assets/stylesheets/resolve/_common.scss
@@ -87,3 +87,12 @@ nav {
   color: #67512C;
   background-color: #FCF8E3;
 }
+
+// Change link and text colors for a11y
+main a {
+  color: #2200CC !important;
+}
+
+.text-muted, .footer, .umlaut-section .section-subheading, .umlaut-section.holding .umlaut-holdings .umlaut-holding-notes, .umlaut-section.book-icons .umlaut-holdings .umlaut-holding-notes, .section_prompt, .edition_warning, .response_source, .response_coverage_statement, .response_notes, .umlaut-resource-info .resource-type, .umlaut-resource-info dl.citation-info, .background_progress_spinner {
+  color: #555555 !important;
+}
