--- a/app/assets/stylesheets/resolve_cu.scss
+++ b/app/assets/stylesheets/resolve_cu.scss
@@ -16,6 +16,7 @@
 @import "resolve/common";
 @import "resolve/permalink";
 @import "nyulibraries_stylesheets/nyulibraries/cu/header";
+@import "alerts";
 
 .header {
   h1 {
