--- a/app/assets/stylesheets/resolve_ns.scss
+++ b/app/assets/stylesheets/resolve_ns.scss
@@ -17,6 +17,7 @@
 @import "resolve/permalink";
 @import "nyulibraries_stylesheets/nyulibraries/ns/misc";
 @import "nyulibraries_stylesheets/nyulibraries/ns/header";
+@import "alerts";
 
 .header {
   border-bottom: 2px solid #E8E8E8;
