--- a/app/assets/stylesheets/resolve_nyuad.scss
+++ b/app/assets/stylesheets/resolve_nyuad.scss
@@ -16,6 +16,7 @@
 @import "nyulibraries_stylesheets/nyulibraries/misc";
 @import "resolve/common";
 @import "resolve/permalink";
+@import "alerts";
 
 .header, nav {
   background-color: $nyu-purple;
