--- a/app/assets/stylesheets/resolve_nyush.scss
+++ b/app/assets/stylesheets/resolve_nyush.scss
@@ -15,6 +15,7 @@
 @import "nyulibraries_stylesheets/nyulibraries/misc";
 @import "resolve/common";
 @import "resolve/permalink";
+@import "alerts";
 
 header {
   h1 {
