Restore browse and short form, just dont render them in journal search

--- a/app/views/search/journal_search.html.erb
+++ b/app/views/search/journal_search.html.erb
@@ -1,6 +1,5 @@
 <div class="search with-tabs">
-  <%= render 'short_form' %>
-  <%= render 'browse' %>
+  <div>Journals are now in the <a href="<%= bobcat_breadcrumb_base_url %>">Books & More</a> tab.</div>
 </div>
 <%= form_tag root_url, remote: true, class: "form-inline", target: :_blank do %>
   <%#= render 'controls' %>
