--- a/app/views/resolve/_wayfinder.html.erb
+++ b/app/views/resolve/_wayfinder.html.erb
@@ -1,5 +1,5 @@
 <ul>
-  <li><a href="<%= bobcat_breadcrumb_root %>" target="_blank">Catalog Search <span class="sr-only">(opens in new window)</span>
+  <li><a href="<%= bobcat_breadcrumb_base_url %>" target="_blank">Catalog Search <span class="sr-only">(opens in new window)</span>
   <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"/></svg>
   </a>
 </ul>
