Remove deprecation message

--- a/app/assets/stylesheets/resolve/_common.scss
+++ b/app/assets/stylesheets/resolve/_common.scss
@@ -90,7 +90,7 @@ nav {
 
 // Change link and text colors for a11y
 main a {
-  color: #2200CC !important;
+  color: #2200CC;
 }
 
 .text-muted, .footer, .umlaut-section .section-subheading, .umlaut-section.holding .umlaut-holdings .umlaut-holding-notes, .umlaut-section.book-icons .umlaut-holdings .umlaut-holding-notes, .section_prompt, .edition_warning, .response_source, .response_coverage_statement, .response_notes, .umlaut-resource-info .resource-type, .umlaut-resource-info dl.citation-info, .background_progress_spinner {
