--- a/app/views/layouts/resolve.html.erb
+++ b/app/views/layouts/resolve.html.erb
@@ -12,7 +12,7 @@
     <%= render 'common/google_tag_manager_noscript' %>
     <%= render :partial => "umlaut/header" %>
     <main>
-    <%= render "common/persistent_alert" %>
+    <%= render "common/deprecation_msg" %>
     <div class="umlaut-container">
       <div class="umlaut-main-container-fluid container-fluid <%= "umlaut-#{params[:controller]}-container" %>">
         <%= yield %>
