--- a/app/views/layouts/resolve.html.erb
+++ b/app/views/layouts/resolve.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Getit | <%= @page_title %></title>
+    <title>GetIt | <%= @page_title %></title>
+    <meta name="onlyfortesting" content="onlyfortesting">
     <%= render 'common/google_tag_manager_script' %>
     <%= meta %>
     <%= resolve_stylesheets %>
