Remove renders of permalink

--- a/app/views/nyu/_header.html.erb
+++ b/app/views/nyu/_header.html.erb
@@ -3,7 +3,7 @@
   <div class="institution"></div>
 </header>
 <nav id="nav1">
-  <%= render_umlaut_permalink %>
+  <%#= render_umlaut_permalink %>
   <ul>
     <li class="nyu-login"><%= login("umlaut.institution" => institution.code ) %></li>
   </ul>
