Attempts at removing other login functionality without routes; test failing

--- a/app/views/resolve/_request_link.html.erb
+++ b/app/views/resolve/_request_link.html.erb
@@ -6,7 +6,8 @@
 <% else %>
   <%- # Link to login screen -%>
   <strong>
-    <%= link_to(t('resolve.holdings.login_text'),
+    Unavailable
+    <%#= link_to(t('resolve.holdings.login_text'),
       login_url,
       class: "request-login-link") %>
   </strong>
