Hack to disable the link router links and replace with the actual links to the services -- DO NOT MERGE
See comment in monday.com ticket: https://nyu-lib.monday.com/boards/765008773/pulses/3386819884/posts/1897865218

--- a/app/views/resolve/_fulltext_response_item.html.erb
+++ b/app/views/resolve/_fulltext_response_item.html.erb
@@ -40,11 +40,10 @@ display_text = view_data[:display_text]
     end %>
   <% else %>
     <%- # Ordinary href link, with coverage roll up -%>
-    <%= link_to({controller: 'link_router', id: service_response.id},
-      {id: "svctype_link_#{service_response.id}", target: "_blank"}) do %>
-       <%= coverage_summary(view_data) %>
-       <%= display_text %>
-    <% end %>
+    <a id="svctype_link_<%= service_response.id %>" target="_blank" href="<%= direct_url(service_response.id) %>">
+      <%= coverage_summary(view_data) %>
+      <%= display_text %>
+    </a>
   <% end %>
   <%- # Which service did this come from? -%>
   <% if show_source %>
